--- a/ProjectCrudUsingMongodbView11_Dec_22/pom.xml
+++ b/ProjectCrudUsingMongodbView11_Dec_22/pom.xml
@@ -38,6 +38,11 @@
 			<artifactId>joda-time</artifactId>
 			<version>2.10.2</version>
 		</dependency>
+	<dependency>
+		<groupId>com.fasterxml.jackson.datatype</groupId>
+		<artifactId>jackson-datatype-joda</artifactId>
+		<version>2.12.3</version>
+	</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
